Removed unwanted projects.

--- a/.gitignore
+++ b/.gitignore
@@ -6,3 +6,5 @@
 /.vs/slnx.sqlite
 /.vs/VSWorkspaceState.json
 /Calculator/ScientificCalculator/obj/Debug
+/CTraining/.vs/CTraining/v16/.suo
+/CTraining/Day1Calculator/obj/Debug
