Minimum number in Array Complete code

--- a/.gitignore
+++ b/.gitignore
@@ -8,3 +8,4 @@
 /Calculator/ScientificCalculator/obj/Debug
 /CTraining/.vs/CTraining/v16/.suo
 /CTraining/Day1Calculator/obj/Debug
+/Day2ArrayMinimum/.vs/Day2ArrayMinimum/v16/.suo
