--- a/.gitignore
+++ b/.gitignore
@@ -9,3 +9,4 @@
 /CTraining/.vs/CTraining/v16/.suo
 /CTraining/Day1Calculator/obj/Debug
 /Day2ArrayMinimum/.vs/Day2ArrayMinimum/v16/.suo
+/CTraining/Day2ArrayMinimum/bin/Debug
