Day 4 codes added

--- a/.gitignore
+++ b/.gitignore
@@ -10,3 +10,8 @@
 /CTraining/Day1Calculator/obj/Debug
 /Day2ArrayMinimum/.vs/Day2ArrayMinimum/v16/.suo
 /CTraining/Day2ArrayMinimum/bin/Debug
+/CTraining/DailyProject/obj/Debug
+/CTraining/Day4AbstractAddition/obj/Debug
+/CTraining/Day4AreaOfSquare/obj/Debug
+/CTraining/Day4ConstructorCalculator/obj/Debug
+/CTraining/Day4ListCalculator/obj/Debug
