Day 5 codes added

--- a/.gitignore
+++ b/.gitignore
@@ -15,3 +15,5 @@
 /CTraining/Day4AreaOfSquare/obj/Debug
 /CTraining/Day4ConstructorCalculator/obj/Debug
 /CTraining/Day4ListCalculator/obj/Debug
+/CTraining/Day5FileCalculator/obj/Debug
+/CTraining/Day5StringCompare/obj/Debug
