Validation added to Day5FileCalculator. Also added Day 6 codes.

--- a/.gitignore
+++ b/.gitignore
@@ -17,3 +17,6 @@
 /CTraining/Day4ListCalculator/obj/Debug
 /CTraining/Day5FileCalculator/obj/Debug
 /CTraining/Day5StringCompare/obj/Debug
+/CTraining/Day6GetAssemblyPath/obj/Debug
+/CTraining/Day6LetterOccurrence/obj/Debug
+/CTraining/Day6SentenceSort/obj/Debug
