Day 7 code added.

--- a/.gitignore
+++ b/.gitignore
@@ -20,3 +20,4 @@
 /CTraining/Day6GetAssemblyPath/obj/Debug
 /CTraining/Day6LetterOccurrence/obj/Debug
 /CTraining/Day6SentenceSort/obj/Debug
+/CTraining/Day7SQLConnection/obj/Debug
